fix(pricing): layout issue

--- a/express/blocks/pricing/pricing.css
+++ b/express/blocks/pricing/pricing.css
@@ -54,6 +54,7 @@ main .pricing .cta {
     margin: 40px 0 0 0;
     border-radius: 30px;
     max-width: none;
+    box-sizing: border-box;
 }
 
 main .pricing .pricing-right img {
@@ -137,6 +138,10 @@ main .pricing .pricing-right .pricing-iconlist .pricing-iconlist-description {
     flex: 1;
     align-items: center;
     margin-left: 10px;
+}
+
+main .pricing .pricing-right .pricing-iconlist .pricing-iconlist-description > p {
+    margin: 5px;
 }
 
 @media (min-width: 600px) {
